--- a/resource.html
+++ b/resource.html
@@ -31,35 +31,35 @@
 
                         <div class="col-6 col-sm-3 col-lg-3 anime-item"><a
                                 href="https://ani.gamer.com.tw/animeRef.php?sn=112916" target="_blank"><img
-                                    class="anime-pic" src="img\S1.png" alt="S1"><div class="caption-overlay">Season 1</div></a></div>
+                                    class="anime-pic" src="img\seasons\S1.png" alt="S1"><div class="caption-overlay">Season 1</div></a></div>
 
                         <div class="col-6 col-sm-3 col-lg-3 anime-item"><a
                                 href="https://ani.gamer.com.tw/animeRef.php?sn=112945" target="_blank"><img
-                                    class="anime-pic" src="img\S2.png" alt="S2"><div class="caption-overlay">Season 2</div></a></div>
+                                    class="anime-pic" src="img\seasons\S2.png" alt="S2"><div class="caption-overlay">Season 2</div></a></div>
 
                         <div class="col-6 col-sm-3 col-lg-3 anime-item"><a
                                 href="https://ani.gamer.com.tw/animeRef.php?sn=91866" target="_blank"><img
-                                    class="anime-pic" src="img\S3.png" alt="S3"><div class="caption-overlay">Season 3</div></a></div>
+                                    class="anime-pic" src="img\seasons\S3.png" alt="S3"><div class="caption-overlay">Season 3</div></a></div>
 
                         <div class="col-6 col-sm-3 col-lg-3 anime-item"><a
                                 href="https://ani.gamer.com.tw/animeRef.php?sn=101709" target="_blank"><img
-                                    class="anime-pic" src="img\S4.png" alt="S4"><div class="caption-overlay">Season 4</div></a></div>
+                                    class="anime-pic" src="img\seasons\S4.png" alt="S4"><div class="caption-overlay">Season 4</div></a></div>
 
                         <div class="col-6 col-sm-3 col-lg-3 anime-item"><a
                                 href="https://ani.gamer.com.tw/animeRef.php?sn=112643" target="_blank"><img
-                                    class="anime-pic" src="img\S5.png" alt="S5"><div class="caption-overlay">Season 5</div></a></div>
+                                    class="anime-pic" src="img\seasons\S5.png" alt="S5"><div class="caption-overlay">Season 5</div></a></div>
 
                         <div class="col-6 col-sm-3 col-lg-3 anime-item"><a
                                 href="https://ani.gamer.com.tw/animeRef.php?sn=113134" target="_blank"><img
-                                    class="anime-pic" src="img\S6.png" alt="S6"><div class="caption-overlay">Season 6</div></a></div>
+                                    class="anime-pic" src="img\seasons\S6.png" alt="S6"><div class="caption-overlay">Season 6</div></a></div>
 
                         <div class="col-6 col-sm-3 col-lg-3 anime-item"><a
                                 href="https://ani.gamer.com.tw/animeRef.php?sn=113528" target="_blank"><img
-                                    class="anime-pic" src="img\S7.png" alt="S7"><div class="caption-overlay">Season 7</div></a></div>
+                                    class="anime-pic" src="img\seasons\S7.png" alt="S7"><div class="caption-overlay">Season 7</div></a></div>
 
                         <div class="col-6 col-sm-3 col-lg-3 anime-item"><a
                                 href="https://ani.gamer.com.tw/animeRef.php?sn=113886" target="_blank"><img
-                                    class="anime-pic" src="img\S8.png" alt="S8"><div class="caption-overlay">Final Season</div></a></div>
+                                    class="anime-pic" src="img\seasons\S8.png" alt="S8"><div class="caption-overlay">Final Season</div></a></div>
                     </div>
                 </div>
 
