--- a/home.html
+++ b/home.html
@@ -5,15 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的英雄學院 - 官網</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
+
 <body>
-    <section class="hero-image">
-        <img src="img/hero-banner.jpg" alt="Hero Banner" class="img-fluid w-100">
-    </section>
+
+    <div id="header-placeholder"></div>
+    <script>
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header-placeholder').innerHTML = data;
+            });
+    </script>
+
+
+<div class="line"></div>
+
+<section class="hero-image mt-4">
+    <img src="img/banner.png" alt="Hero Banner" class="img-fluid w-100">
+</section>
 
     <div class="container main-content">
-        <hr class="divider">
         
         <h2 class="section-title">NEWS</h2>
         <div class="news-grid">
