--- a/detail.html
+++ b/detail.html
@@ -10,13 +10,13 @@
     <div id="originalPostArea" class="p-4 mb-4" style="background-color: #EBC053; border: 3px solid #000; border-radius: 10px;">
         載入中...
     </div>
-
-    <div class="p-4" style="background-color: #EBC053; border: 3px solid #000; border-radius: 10px;">
+    <div class="line"></div>
+    <div class="p-4 comment-border">
         <h4>全部留言</h4>
         <hr style="border: 1px solid #000;">
         <div id="replyList" class="mb-4"></div>
 
-        <div class="p-3" style="border: 2px solid #000; background-color: #f0f0f0;">
+        <div class="p-3 comment-words">
             <div class="mb-2">
                 輸入匿名：<input type="text" id="replyName" class="form-control-sm">
             </div>
@@ -30,7 +30,7 @@
 </div>
 
  <footer class="container footer">
-        <hr>
+        <div class="line"></div>
         <div class="container footer-content">
             <div class="footer-info">
                 <a class="link-dark" href="">隱私條款</a><br>
