--- a/intro.html
+++ b/intro.html
@@ -19,7 +19,7 @@
 
 <body>
     <footer class="container footer">
-        <hr>
+        <div class="line"></div>
         <div class="container footer-content">
             <div class="footer-info">
                 <a class="link-dark" href="">隱私條款</a><br>
