--- a/pla.html
+++ b/pla.html
@@ -34,7 +34,7 @@
         </div>
 </div>
         <footer class="container footer">
-        <hr>
+        <div class="line"></div>
         <div class="container footer-content">
             <div class="footer-info">
                 <a class="link-dark" href="">隱私條款</a><br>
