--- a/resource.html
+++ b/resource.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <hr>
+                <div class="line"></div>
 
                 <h2 class="container manga-title">Manga</h2>
                 <div class="container">
@@ -202,8 +202,10 @@
         </div>
     </main>
 
+    
+
     <footer class="container footer">
-        <hr>
+        <div class="line"></div>
         <div class="container footer-content">
             <div class="footer-info">
                 <a class="link-dark" href="">隱私條款</a><br>
