--- a/resource.html
+++ b/resource.html
@@ -1,69 +1,75 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY HERO ACADEMIA-RESOURCE</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>MY HERO ACADEMIA-RESOURCE</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-    <div id="manga-overlay"></div>
 
-    <div id="anime-detail-portal" class="anime-detail-card">
-        <div class="card-video">
-            <iframe src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-        <a href="#" target="_blank" class="watch-button">點擊觀看</a>
-        <div class="video-info"></div>
-    </div>
 
-    <main class="content-wrapper">
-        <div class="container">
-            <section>
-                <h2 class="container anime-title mt-5 mb-4">Anime</h2>
-                <div class="container">
-                    <div class="row row-cols-2 row-cols-md-4 g-4" id="anime-list-container"></div>
+        <div id="manga-overlay"></div>
+
+        <div id="anime-detail-portal" class="anime-detail-card">
+                <div class="card-video">
+                        <iframe src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
-            </section>
+                <a href="#" target="_blank" class="watch-button">點擊觀看</a>
+                <div class="video-info"></div>
+        </div>
 
-            <div class="line my-5"></div>
-
-            <section>
-                <h2 class="container manga-title mb-4">Manga</h2>
+        <main class="content-wrapper">
                 <div class="container">
-                    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-2" id="manga-list-container"></div>
+                        <section>
+                                <h2 class="container anime-title mt-5 mb-4">Anime</h2>
+                                <div class="container">
+                                        <div class="row row-cols-2 row-cols-md-4 g-4" id="anime-list-container"></div>
+                                </div>
+                        </section>
+
+                        <div class="line my-5"></div>
+
+                        <section>
+                                <h2 class="container manga-title mb-4">Manga</h2>
+                                <div class="container">
+                                        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-2"
+                                                id="manga-list-container"></div>
+                                </div>
+                        </section>
                 </div>
-            </section>
-        </div>
-    </main>
+        </main>
 
-    <footer class="container footer">
-        <div class="line"></div>
-        <div class="container footer-content d-flex justify-content-between align-items-center">
-            <div class="footer-info">
-                <a class="link-dark" href="#">隱私條款</a><br>
-                <a class="link-dark" href="#">使用條款</a><br>
-                <a class="link-dark" href="#">贊助商</a>
-            </div>
-            <div class="text-center">
-                <p class="footer-p mb-0">聯絡我們: myheroacademia@gmail.com</p>
-                <p class="footer-p mb-0">Copyright © 2025 Roxanne&Potato</p>
-            </div>
-            <div class="footer-icons">
-                <a href="#"><img class="footer-icons-ig" src="img/ig.svg" alt="ig" width="24"></a>
-                <a href="#"><img class="footer-icons-x" src="img/x.svg" alt="x" width="24"></a>
-                <a href="#"><img class="footer-icons-fb" src="img/fb.png" alt="fb" width="24"></a>
-            </div>
-        </div>
-    </footer>
+        <footer class="container footer">
+                <div class="line"></div>
+                <div class="container footer-content d-flex justify-content-between align-items-center">
+                        <div class="footer-info">
+                                <a class="link-dark" href="#">隱私條款</a><br>
+                                <a class="link-dark" href="#">使用條款</a><br>
+                                <a class="link-dark" href="#">贊助商</a>
+                        </div>
+                        <div class="text-center">
+                                <p class="footer-p mb-0">聯絡我們: myheroacademia@gmail.com</p>
+                                <p class="footer-p mb-0">Copyright © 2025 Roxanne&Potato</p>
+                        </div>
+                        <div class="footer-icons">
+                                <a href="#"><img class="footer-icons-ig" src="img/ig.svg" alt="ig" width="24"></a>
+                                <a href="#"><img class="footer-icons-x" src="img/x.svg" alt="x" width="24"></a>
+                                <a href="#"><img class="footer-icons-fb" src="img/fb.png" alt="fb" width="24"></a>
+                        </div>
+                </div>
+        </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
-    <script src="js/anime.js"></script>
-    <script src="js/manga.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
+        <script src="js/anime.js"></script>
+        <script src="js/manga.js"></script>
 </body>
+
 </html>
