--- a/header.html
+++ b/header.html
@@ -20,9 +20,9 @@
 
             <nav class="nav-links">
                 <a href="intro.html" class="nav-item-link">INTRODUCTION</a>
-                <a href="character.html" class="nav-item-link">CHARACTER</a>
+                <a href="cha.html" class="nav-item-link">CHARACTER</a>
                 <a href="resource.html" class="nav-item-link">RESOURCE</a>
-                <a href="platform.html" class="nav-item-link">PLATFORM</a>
+                <a href="pla.html" class="nav-item-link">PLATFORM</a>
             </nav>
         </div>
     </header>
