--- a/resource.html
+++ b/resource.html
@@ -10,18 +10,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/resource.css">
 </head>
 
 <body>
-        <div id="header-placeholder"></div>
-        <script>
-                fetch('header.html')
-                        .then(response => response.text())
-                        .then(data => {
-                                document.getElementById('header-placeholder').innerHTML = data;
-                        });
-        </script>
-        <div class="line"></div>
+        
 
         <div id="manga-overlay"></div>
 
