--- a/resource.html
+++ b/resource.html
@@ -14,7 +14,14 @@
 </head>
 
 <body>
-        
+        <div id="loading-screen">
+                <div class="loading-content">
+                        <img src="img/all might.png" class="loading-img" alt="Loading">
+
+                        <div class="spinner"></div>
+                        <p class="loading-text">LOADING...</p>
+                </div>
+        </div>
 
         <div id="manga-overlay"></div>
 
@@ -72,6 +79,7 @@
         <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
         <script src="js/anime.js"></script>
         <script src="js/manga.js"></script>
+        <script src="js\loading.js"></script>
 </body>
 
 </html>
