--- a/pla.html
+++ b/pla.html
@@ -18,31 +18,54 @@
 </head>
 
 <body>
+    <div id="loading-screen">
+        <div class="loading-content">
+            <img src="img/all might.png" class="loading-img" alt="Loading">
 
-    <div id="header-placeholder"></div>
-    <script>
-        fetch('header.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('header-placeholder').innerHTML = data;
-            });
-    </script>
-    <div class="line"></div>
-
+            <div class="spinner"></div>
+            <p class="loading-text">LOADING...</p>
+        </div>
+    </div>
 
     <div class="container mt-5">
-        <div class="p-4 mb-4" style="background-color: #EBC053; border: 2px solid #333; border-radius: 10px;">
-            <h3>新增討論</h3>
-            <div class="mb-3">
-                <input type="text" id="userName" class="form-control" placeholder="您的名稱">
-            </div>
-            <div class="mb-3">
-                <textarea id="commentContent" class="form-control" rows="3" placeholder="請輸入討論內容..."></textarea>
-            </div>
-            <button id="submitBtn" class="btn btn-dark w-100">發布留言</button>
-        </div>
 
-        <div id="commentList">
+        <div class="row">
+            <div class="col-12 col-md-8 col-lg-9">
+                <div class="newdis p-4 mb-4">
+                    <h3>新增討論</h3>
+                    <div class="mb-3">
+                        <input type="text" id="userName" class="form-control" placeholder="您的名稱">
+                    </div>
+                    <div class="mb-3">
+                        <textarea id="commentContent" class="form-control" rows="3" placeholder="請輸入討論內容..."></textarea>
+                    </div>
+                    <button id="submitBtn" class="input-btn btn btn-outline-dark w-100">發布留言</button>
+                </div>
+
+                <div id="commentList">
+                </div>
+            </div>
+
+            <div class="col-md-4 col-lg-3 d-none d-md-block">
+                <div class="rules-container p-3">
+                    <h4>RULES</h4>
+                    <ul class="list-unstyled">
+                        <li>有關個資隱私權</li>
+                        <li>爭議性</li>
+                        <li>政治性</li>
+                        <li>針對性</li>
+                        <li>洗版騷擾</li>
+                        <li>公審或無從查證的貼文，不代表本網站立場</li>
+                        <li>本網站不負法律責任</li>
+                    </ul>
+                </div>
+
+                <div class="news-container p-3 mt-4">
+                    <h4>NEWS</h4>
+                    <div class="news-box">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <footer class="container footer">
@@ -66,6 +89,6 @@
             </div>
         </div>
     </footer>
-
+    <script type="module" src="js\loading.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
