--- a/detail.html
+++ b/detail.html
@@ -26,7 +26,7 @@
                     style="background-color: #EBC053; border: 3px solid #000; border-radius: 10px;">
                     載入中...
                 </div>
-               
+
                 <div class="p-4 comment-border">
                     <h4>全部留言</h4>
                     <hr style="border: 1px solid #000;">
@@ -90,6 +90,12 @@
             </div>
         </div>
     </footer>
+
+    <button id="back-to-top">
+        <div class="arrow-up"></div>
+
+    </button>
+    <script src="js\top.js"></script>
 
     <script type="module" src="js\loading.js"></script>
     <script type="module" src="js/detail.js"></script>
