--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@
             </a>
 
             <nav class="nav-links">
-                <a href="intro.html" class="nav-item-link">INTRODUCTION</a>
+                <a href="introduction.html" class="nav-item-link">INTRODUCTION</a>
                 <a href="character.html" class="nav-item-link">CHARACTER</a>
                 <a href="resource.html" class="nav-item-link">RESOURCE</a>
                 <a href="pla.html" class="nav-item-link">PLATFORM</a>
