--- a/pla.html
+++ b/pla.html
@@ -91,10 +91,11 @@
     </footer>
 
 
-    <button id="back-to-top">
-        <div class="arrow-up"></div>
-
-    </button>
+        <button id="back-to-top">
+                <img src="img/feather.png" alt="All Might Icon">
+                <span>TOP</span>
+        </button>
+        <script src="js\top.js"></script>
     <script src="js\top.js"></script>
     <script type="module" src="js\loading.js"></script>
     <script type="module" src="js/main.js"></script>
