--- a/detail.html
+++ b/detail.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <title>討論區</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pla.css">
 </head>
 
 <body>
- 
+
 
 
 
@@ -74,34 +76,38 @@
     </div>
 
     <footer class="container footer">
-        <div class="line"></div>
-        <div class="container footer-content">
-            <div class="footer-info">
-                <a class="link-dark" href="">隱私條款</a><br>
-                <a class="link-dark" href="">使用條款</a><br>
-                <a class="link-dark" href="">贊助商</a><br>
+        <div class="footer-line"></div>
+        <div class="footer-content">
+            <div class="line"></div>
+            <div class="footer-left-group">
+                <div class="footer-info">
+                    <a href="#">隱私政策</a>
+                    <a href="#">使用條款</a>
+                    <a href="#">贊助商</a>
+                </div>
+                <div class="footer-text">
+                    <p class="footer-p">聯絡資訊: s111319036@stu.ntue.edu.tw</p>
+                    <p class="footer-p">Copyright © 2025 Roxanne Wu</p>
+                </div>
             </div>
-            <div>
-                <p class="footer-p">聯絡我們: myheroacademia@gmail.com</p>
-                <p class="footer-p">Copyright © 2025 Roxanne&Potato</p>
-            </div>
-
 
             <div class="footer-icons">
-                <a href="#"><img class="footer-icons-ig" src="img\ig.svg" alt="ig"></a>
-                <a href="#"><img class="footer-icons-x" src="img\x.svg" alt="x"></a>
-                <a href="#"><img class="footer-icons-fb" src="img\fb.png" alt="fb"></a>
+                <a href="#"><img src="img/ig.svg" alt="ig"></a>
+                <a href="#"><img src="img/x.svg" alt="x"></a>
+                <a href="#"><img src="img/fb.png" alt="fb"></a>
             </div>
         </div>
     </footer>
 
- 
-        <button id="back-to-top">
-                <img src="img/feather.png" alt="All Might Icon">
-                <span>TOP</span>
-        </button>
-        <script src="js\top.js"></script>
 
+    <button id="back-to-top">
+        <img src="img/feather.png" alt="All Might Icon">
+        <span>TOP</span>
+    </button>
+    <script src="js\top.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
     <script type="module" src="js\loading.js"></script>
     <script type="module" src="js/detail.js"></script>
 </body>
