--- a/resource.html
+++ b/resource.html
@@ -12,20 +12,18 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/resource.css">
+        <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body>
 
-            <script>
-        fetch('header.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('header-placeholder').innerHTML = data;
-            });
-    </script>
+        
+
+
         <div id="loading-screen">
                 <div class="loading-content">
                         <img src="img/all might.png" class="loading-img" alt="Loading">
