--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <img src="img\NEWS\news1.jpg" alt="新聞圖片1" class="news-thumbnail">
 
                     </div>
-                    <div class="news-text"><p>動畫《我的英雄學院》宣布展開 10 週年企劃 紀念視覺圖公開、「More」宣布改編動畫</p></div>
+                    <div class="news-text"><p>《我的英雄學院最終季》宣布將於 2025 年秋季開播</p></div>
                 </div>
                 <div class="news-card-back"><span>點擊前往</span></div>
             </div>
